# rust_axum_crud

./: all.rs
axum_crud/: .env  Cargo.toml  Makefile
axum_crud/migrations/: 20250927123731_create_credentials_table.sql
axum_crud/src/: lib.rs  main.rs
axum_crud/src/crud/: dto.rs  error_traits.rs  handler.rs  middle_ware.rs  mod.rs  model.rs  repository.rs  routes.rs  services.rs
axum_crud/src/database/: dbconnect.rs  mod.rs
axum_crud/src/grouped_routes/: main_route.rs
frontend/: package-lock.json
frontend/src/: App.jsx
