[package]
name = "axum_crud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] } 
tokio = {version = "1.47.1",features = ["full"] }
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
tower-http ={version = "0.6.6",features = ["cors"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
thiserror = "2.0.16"
bcrypt = "0.17.1"
tracing = "0.1"  # For better logging
serde_json = "1.0"